--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "cookie": "^1.0.2",
     "date-fns": "latest",
     "embla-carousel-react": "8.5.1",
     "ethers": "latest",
